k8s/manifests/gateway/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: hivebox-gateway-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
