k8s/manifests/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hivebox-gateway
spec:
  gatewayClassName: hivebox-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
