k8s/manifests/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hivebox-route
spec:
  parentRefs:
    - name: hivebox-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hivebox-service
          port: 8080
